l4sys: clarify IPC gate documentation, esp. forwarding
See ticket #CD-478 point 4.

Change-Id: Ica100c800ab3c5f6973430414f3d73d0db558929

--- a/l4sys/doc/l4sys-l4f-groups.dox
+++ b/l4sys/doc/l4sys-l4f-groups.dox
@@ -23,31 +23,7 @@
 /**
  * \defgroup l4_kernel_object_gate_api IPC-Gate API
  * \ingroup l4_kernel_object_api
- *
- * Secure communication object.
- *
- * IPC-Gate objects provide a means to establish secure communication channels
- * to L4 Threads (\ref l4_thread_api). An IPC-Gate object can be created using
- * a \ref l4_factory_api (l4_factory_create_gate()) and get assigned a specific
- * L4 thread and a \em label as protected payload. The \em label has the size
- * of one machine word and can only be seen by the Task running the thread that
- * is assigned of the IPC-gate. The \em label is received as part of the IPC
- * message.  The \em label can thus be used to securely identify the IPC-gate
- * that was used to send a message.
- *
- * An IPC-gate is usually used to represent an user-level object and may be
- * the address of the data structure for the object in the server task.
- *
- * With client privileges an IPC-gate does not provide any direct API and
- * thus an IPC-gate kernel object cannot be modified by invocations. Each
- * invocation of an IPC-gate kernel object is translated into an IPC message
- * to the assigned thread. To invoke a method of the IPC-gate, it has to be
- * mapped with the #L4_FPAGE_C_IPCGATE_SVR right.
- * \includefile{l4/sys/ipc_gate.h}
- *
- * For the C++ interface refer to the L4::Ipc_gate documentation.
- *
- * \see \ref l4_ipc_api
+ * \copydoc ipc_gate.h
  */
 
 
